--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -41,6 +41,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory 
+		android:key="hardware_keys"
+		android:title="@string/hardware_keys_category">
+
+	<SwitchPreference
+		android:key="hardware_keys_disable"
+		android:title="@string/hardware_keys_disable_title" />
+
+    </PreferenceCategory>
+
      <PreferenceCategory
         android:key="back_key"
         android:title="@string/hardware_keys_back_key_title" >
@@ -49,7 +59,7 @@
             android:key="hwkeys_button_back_single_tap"
             android:summary="@string/hardware_keys_single_tap_summary"
             android:title="@string/hardware_keys_single_tap_title" >
-        </<com.raven.lair.preferences.ActionPreference>
+        </com.raven.lair.preferences.ActionPreference>
 
         <com.raven.lair.preferences.ActionPreference
             android:key="hwkeys_button_back_long_press"
