Hardware key: Customization support [2/2]
Based on DUI

jhenrique09 edits: make it DUI independent

Original commit message:
Same robust action library as used on software navigation. Supports
single tap, double tap, and long press. As a precautionary measure,
single tap back and single tap home are fixed and can not be changed.
Camera button actions are not supported at this time. We will bring
in wake key support at a later time.

Also includes:

Change-Id: I29ff38678821ca80db36d49d3b10d8ac29a6b4de
DUI: Initial checkin for Oreo [4/7]
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -37,4 +37,6 @@
     <!-- The Team -->
     <dimen name="team_recycler_height">500dp</dimen>
 
+    <!-- Shortcut picker -->
+    <dimen name="shortcut_picker_left_padding">70dip</dimen>
 </resources>
