notch-city: Add 3 mode display cutout handler [3/3]
[@AgentFabulous - POSP]
- Add the respective control in here
- Also add a little video illustration I made to go along with it :)

Signed-off-by: Kshitij Gupta <kshitijgm@gmail.com>
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Change-Id: I8fe68610a50e2a430363dc09f4a9adb8a4563ad0

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -43,6 +43,12 @@
         android:fragment="com.raven.lair.fragments.DisplayCutoutForceFullscreenSettings"
         settings:controller="com.raven.lair.fragments.DisplayCutoutForceFullscreenPreferenceController" />
 
+    <PreferenceScreen
+        android:key="cutout_settings"
+        android:title="@string/cutout_main"
+        android:summary="@string/cutout_main_summary"
+        android:fragment="com.raven.lair.fragments.CutoutFragment" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
