--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -129,6 +129,13 @@
         android:title="@string/custom_header_title"
         android:summary="@string/custom_header_summary" />
 
+    <com.corvus.support.preferences.SystemSettingListPreference
+   	android:key="status_bar_show_weather_temp"
+	android:title="@string/statusbar_weather_title"
+	android:dialogTitle="@string/statusbar_weather_dialog_title"
+	android:entries="@array/status_bar_weather_entries"
+	android:entryValues="@array/status_bar_weather_values" />
+
     <com.corvus.support.preferences.SystemSettingListPreference 
         android:key="qs_datausage" 
         android:title="@string/qs_datausage_title" 
