RavenLair : add ability to show daily/monthly data usage [2/2]
Signed-off-by: Sonal Singh <sonal.singh.19993@gmail.com>
Signed-off-by: ashwatthama <sai404142@gmail.com>

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -47,9 +47,10 @@
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
 
-    <com.corvus.support.preferences.SystemSettingSwitchPreference 
+    <com.corvus.support.preferences.SystemSettingListPreference 
         android:key="qs_datausage" 
         android:title="@string/qs_datausage_title" 
-        android:summary="@string/qs_datausage_subtitle"
-        android:defaultValue="false" />
+        android:entries="@array/qs_datausage_entries"
+        android:entryValues="@array/qs_datausage_values"
+        android:defaultValue="0" />
 </PreferenceScreen>
