--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -46,4 +46,10 @@
         android:title="@string/quick_settings_vibrate_title"
         android:summary="@string/quick_settings_vibrate_summary"
         android:defaultValue="false"/>
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference 
+        android:key="qs_datausage" 
+        android:title="@string/qs_datausage_title" 
+        android:summary="@string/qs_datausage_subtitle"
+        android:defaultValue="false" />
 </PreferenceScreen>
