QS tile title visibility [2/2]
Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>
Change-Id: I125394cf0f001dc2a0d18408db4c10cf43328ec7

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -69,6 +69,11 @@
             settings:units="" />
         </PreferenceCategory>
 
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_tile_title_visibility"
+        android:title="@string/qs_tile_title_visibility_title"
+        android:defaultValue="true" />
+
            <!-- QS media player -->
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="qs_media_player"
