RavenLair: Add toggle for lockscreen lock icon [2/2]
Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: I6e331b8e1e7960b08788c495b46f02e751968a12

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -34,6 +34,12 @@
         android:defaultValue="false" />
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="hide_lockicon"
+        android:title="@string/lockscreen_lock_icon_title"
+        android:summary="@string/lockscreen_lock_icon_summary"
+        android:defaultValue="true" />
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
