--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -53,11 +53,11 @@
     <com.corvus.support.preferences.SystemSettingSeekBarPreference
         android:key="lockscreen_media_blur"
         android:title="@string/lockscreen_media_blur_title"
-        android:max="100"
-        settings:min="5"
-        settings:units="%"
-        settings:interval="5"
-        android:defaultValue="100"
+        android:max="25"
+        settings:min="1"
+        settings:units=""
+        settings:interval="1"
+        android:defaultValue="25"
         android:dependency="lockscreen_media_metadata" />   
 
     </PreferenceCategory>
