--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -51,10 +51,18 @@
         android:title="@string/lockscreen_media_category" >
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
-        android:key="lockscreen_media_art"
+        android:key="lockscreen_media_metadata"
         android:title="@string/lockscreen_media_art_title"
         android:summary="@string/lockscreen_media_art_summary"
         android:defaultValue="true" />
+
+     <com.android.settings.corvus.preferences.SystemSettingListPreference 
+            android:key="lockscreen_albumart_filter"
+            android:title="@string/lockscreen_albumart_filter_title"
+            android:entries="@array/lockscreen_albumart_filter_entries"
+            android:entryValues="@array/lockscreen_albumart_filter_values"
+            android:dependency="lockscreen_media_metadata"
+            android:defaultValue="0" />
      
     <com.corvus.support.preferences.SecureSettingSwitchPreference
         android:key="lockscreen_visualizer_enabled"
