Add toggle to disable charging animation [2/2]
Change-Id: I0b6c2f4bf75eef8a8a6a5fabf729c4cfa80c327d

Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: I46bc907f65d0a43fa3946e3cbe63be4f46d3610b

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -69,6 +69,18 @@
         android:title="@string/lockscreen_visualizer_enable"
         android:summary="@string/lockscreen_visualizer_enable_summary"
         android:defaultValue="false" />
+     
+     <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_charging_animation"
+        android:title="@string/lockscreen_charging_animation_title"
+        android:summary="@string/lockscreen_charging_animation_summary"
+        android:defaultValue="true" />
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="charging_animation"
+        android:title="@string/charging_animation_title"
+        android:summary="@string/charging_animation_summary"
+        android:defaultValue="true" />
    
      
     <com.corvus.support.preferences.SystemSettingSeekBarPreference
