--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -70,11 +70,12 @@
         android:summary="@string/lockscreen_visualizer_enable_summary"
         android:defaultValue="false" />
      
-     <com.corvus.support.preferences.SystemSettingSwitchPreference
-        android:key="lockscreen_charging_animation"
+     <com.android.settings.corvus.preferences.SystemSettingListPreference 
+        android:key="lockscreen_charging_animation_style"
         android:title="@string/lockscreen_charging_animation_title"
-        android:summary="@string/lockscreen_charging_animation_summary"
-        android:defaultValue="true" />
+        android:entries="@array/lockscreen_charging_animation_entries"
+        android:entryValues="@array/lockscreen_charging_animation_values"
+        android:defaultValue="1" />
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="charging_animation"
