--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -24,4 +24,9 @@
         android:summary="@string/qs_bg_use_new_tint_summary"
         android:defaultValue="false" />
 
+    <com.corvus.support.preferences.SecureSettingSwitchPreference
+	android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
 </PreferenceScreen>
