--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -30,6 +30,12 @@
         android:summary="@string/show_fourg_icon_summary"
         android:defaultValue="false"/>
 
+    <com.corvus.support.settings.preferences.SystemSettingSwitchPreference
+        android:key="show_volte"
+        android:title="@string/volte_switch_title"
+        android:summary="@string/volte_switch_summary"
+        android:defaultValue="true" />
+
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="data_disabled_icon"
         android:title="@string/data_disabled_icon_title"
