RavenLair : Optional VoWiFi icon [2/2]
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>
Change-Id: I1caab11e0d60b567d777161f36333fe821c42972
Signed-off-by: ashwatthama <sai404142@gmail.com>

--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -41,8 +41,17 @@
          android:title="@string/volte_icon_style_title"
          android:entries="@array/volte_icon_type_entries"
          android:entryValues="@array/volte_icon_type_values"
+	 android:summary="%s"
+         android:defaultValue="0"
+         android:dependency="show_volte_icon"/>
+
+    <com.corvus.support.preferences.SystemSettingListPreference
+         android:key="vowifi_icon"
+         android:title="@string/vowifi_icon_title"
+         android:entries="@array/vowifi_icon_entries"
+         android:entryValues="@array/vowifi_icon_values"
          android:summary="%s"
-         android:defaultValue="0"/>
+	 android:defaultValue="0"/>
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="data_disabled_icon"
