--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -53,6 +53,14 @@
          android:summary="%s"
 	 android:defaultValue="0"/>
 
+    <com.corvus.support.preferences.SystemSettingListPreference
+         android:key="vowifi_icon_style"
+         android:title="@string/vowifi_icon_style_title"
+         android:entries="@array/vowifi_icon_style_entries"
+         android:entryValues="@array/vowifi_icon_style_values"
+         android:summary="%s"
+         android:defaultValue="0"/>
+
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="data_disabled_icon"
         android:title="@string/data_disabled_icon_title"
