--- a/res/xml/icon_manager.xml
+++ b/res/xml/icon_manager.xml
@@ -30,11 +30,19 @@
         android:summary="@string/show_fourg_icon_summary"
         android:defaultValue="false"/>
 
-    <com.corvus.support.settings.preferences.SystemSettingSwitchPreference
-        android:key="show_volte"
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="show_volte_icon"
         android:title="@string/volte_switch_title"
         android:summary="@string/volte_switch_summary"
         android:defaultValue="true" />
+
+    <com.corvus.support.preferences.SystemSettingListPreference
+         android:key="volte_icon_style"
+         android:title="@string/volte_icon_style_title"
+         android:entries="@array/volte_icon_type_entries"
+         android:entryValues="@array/volte_icon_type_values"
+         android:summary="%s"
+         android:defaultValue="0"/>
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="data_disabled_icon"
