--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -143,6 +143,7 @@
 
     <!-- VoLTE Icon Type -->
     <string-array name="volte_icon_type_entries" translatable="false">
+	<item>@string/volte_icon_oos10</item>
 	<item>@string/volte_icon_emui</item>
 	<item>@string/volte_icon_miui</item>
 	<item>@string/volte_icon_hd2</item>
@@ -154,6 +155,7 @@
     </string-array>
 
     <string-array name="volte_icon_type_values" translatable="false">
+	<item>8</item>
 	<item>7</item>
 	<item>6</item>
 	<item>5</item>
