--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,7 +23,6 @@
     <color name="color_active">#FF3A3A3A</color>
     <color name="color_inactive">#BC606060</color> 
 
-   
     <!-- Bottom navigation bar -->
     <color name="nav_bg_light">#ff9e9e9e</color>
 	
@@ -95,4 +94,7 @@
     <color name="default_inactive_shape_color">#e5e5e5</color>
     <color name="default_inactive_color">#212121</color>
     <color name="default_shape_inactive_color">#888888</color>
+
+    <!-- FOD icon picker -->
+    <color name="fod_item_background_stroke_color">#d6d6d6</color>
 </resources>
