--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -37,4 +37,8 @@
     <!-- The Team -->
     <dimen name="team_recycler_height">500dp</dimen>
 
+    <!-- FOD icon picker -->
+    <dimen name="fod_picker_item_margin">10dp</dimen>
+    <dimen name="fod_picker_item_size">100dp</dimen>
+    <dimen name="fod_picker_item_padding">20dp</dimen>
 </resources>
