--- a/res/xml/fingerprint_prefs.xml
+++ b/res/xml/fingerprint_prefs.xml
@@ -23,6 +23,23 @@
         android:key="fod_icon_picker"
         android:title="@string/fod_icon_picker_category_title">
 
+        <!-- FOD icon picker -->
+        <Preference
+            android:key="fod_icon_picker_category"
+            android:title="@string/fod_icon_picker_title"
+            android:summary="@string/fod_icon_picker_summary"
+            android:fragment="com.raven.lair.fragments.FODIconPickerFragment" />
+
+        <!-- FOD pressed color -->
+        <com.corvus.support.preferences.SystemSettingListPreference
+            android:key="fod_color"
+            android:dialogTitle="@string/fod_pressed_color_title"
+            android:title="@string/fod_pressed_color_title"
+            android:summary="%s"
+            android:entries="@array/fod_pressed_color_entries"
+            android:entryValues="@array/fod_pressed_color_values"
+            android:defaultValue="@*android:integer/config_fod_pressed_color" />
+
         <!-- FOD recognizing animation -->
         <com.corvus.support.preferences.SystemSettingSwitchPreference
             android:key="fod_recognizing_animation"
