--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -55,6 +55,11 @@
 	<item>@string/lockscreen_charging_animation_phone</item>
         <item>@string/lockscreen_charging_animation_stack</item>
         <item>@string/lockscreen_charging_animation_wavy</item>
+	<item>@string/lockscreen_charging_animation_split</item>
+        <item>@string/lockscreen_charging_animation_yellow</item>
+        <item>@string/lockscreen_charging_animation_virus</item>
+        <item>@string/lockscreen_charging_animation_wash</item>
+        <item>@string/lockscreen_charging_animation_wear</item>
     </string-array>
 
     <string-array name="lockscreen_charging_animation_values" translatable="false">
@@ -67,6 +72,11 @@
 	<item>6</item>
         <item>7</item>
         <item>8</item>
+	<item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
     </string-array>
 
    <string-array name="status_bar_battery_style_entries" translatable="false">
