--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -22,21 +22,21 @@
         android:title="@string/battery_options_title"
         android:summary="@string/battery_options_summary"
         android:fragment="com.raven.lair.fragments.BatteryOptions" />
-<!--
-    <com.raven.lair.preferences.CategoryPreference
+
+<!--    <com.raven.lair.preferences.CategoryPreference
         android:key="carrier_label_category"
         android:icon="@drawable/dt_carrier_label"
         android:title="@string/carrier_label_title"
         android:summary="@string/carrier_label_summary"
         android:fragment="com.raven.lair.fragments.CarrierLabel" />
-
+-->
     <com.raven.lair.preferences.CategoryPreference
         android:key="clock_options_category"
         android:icon="@drawable/dt_clock_options"
         android:title="@string/clock_options_title"
         android:summary="@string/clock_options_summary"
         android:fragment="com.raven.lair.fragments.ClockOptions" />
--->
+
     <com.raven.lair.preferences.CategoryPreference
         android:key="icon_manager_title"
         android:icon="@drawable/dt_icon_manager"
