--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -27,6 +27,13 @@
         android:summary="@string/double_tap_sleep_gesture_summary"
         android:defaultValue="false" />
 
+     <!-- Screenshot Sound  -->
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="screenshot_sound"
+        android:title="@string/screenshot_sound_title"
+        android:summary="@string/screenshot_sound_summary"
+        android:defaultValue="true" />
+
 	<Preference
             android:key="systemui_tuner_statusbar"
             android:title="@string/statusbar_items_title"
