--- a/res/xml/brightness_slider.xml
+++ b/res/xml/brightness_slider.xml
@@ -20,5 +20,12 @@
         android:title="@string/qs_brightness_position_bottom_title"
         android:summary="@string/qs_brightness_position_bottom_summary"
         android:defaultValue="false" />
+    
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_show_auto_brightness"
+        android:title="@string/qs_show_auto_brightness_title"
+        android:summary="@string/qs_show_auto_brightness_summary"
+        android:defaultValue="true" />
+   
 
 </PreferenceScreen>
