RavenLair : Allow hiding notification headers [2/2]
Gimme back my space, thank you

Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: ashwatthama <sai404142@gmail.com>

--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -29,4 +29,10 @@
 
     </PreferenceCategory>
 
+        <com.corvus.support.preferences.SystemSettingSwitchPreference
+            android:key="notification_headers"
+            android:title="@string/notification_headers_title"
+            android:summary="@string/notification_headers_summary"
+            android:defaultValue="true" />
+
 </PreferenceScreen>
