RavenLair: Allow toggling QS media player [2/2]
Change-Id: I301b712e33c80c9c766d09f266779216aee7b661

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -32,6 +32,14 @@
             android:fragment="com.raven.lair.fragments.BrightnessSliderSettings"
             android:defaultValue="true" />
 
+           <!-- QS media player -->
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_media_player"
+        android:title="@string/qs_media_player_title"
+        android:summaryOn="@string/qs_media_player_summary_on"
+        android:summaryOff="@string/qs_media_player_summary_off"
+        android:defaultValue="true" />
+
 
     <com.corvus.support.preferences.SecureSettingSwitchPreference
 	android:key="quick_settings_vibrate"
