--- a/res/xml/fingerprint_prefs.xml
+++ b/res/xml/fingerprint_prefs.xml
@@ -55,6 +55,13 @@
             android:entryValues="@array/fod_recog_animation_values"
             android:defaultValue="0"
             android:dependency="fod_recognizing_animation" />
+
+        <!-- FOD Nightlight -->
+        <com.corvus.support.preferences.SystemSettingSwitchPreference
+            android:key="fod_night_light"
+            android:title="@string/fod_night_light_title"
+            android:summary="@string/fod_night_light_summary"
+            android:defaultValue="@*android:bool/disable_fod_night_light"  />
     </PreferenceCategory>
 
 </PreferenceScreen>
