--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -106,6 +106,12 @@
         android:key="quick_settings_animations"
         android:title="@string/qs_tile_animation_title">
 
+       <Preference
+            android:key="animations_category"
+            android:title="@string/animation_settings_title"
+            android:summary="@string/animation_settings_summary"
+            android:fragment="com.raven.lair.fragments.AnimationSettings" />
+
         <ListPreference
             android:key="qs_tile_animation_style"
             android:title="@string/qs_tile_animation_style_title"
