--- a/res/xml/corvus_settings_animations.xml
+++ b/res/xml/corvus_settings_animations.xml
@@ -32,6 +32,10 @@
             android:title="@string/task_open_title" />
 
         <ListPreference
+            android:key="task_open_behind"
+            android:title="@string/task_open_behind_title" />
+
+        <ListPreference
             android:key="task_close"
             android:title="@string/task_close_title" />
 
