--- a/res/xml/corvus_settings_animations.xml
+++ b/res/xml/corvus_settings_animations.xml
@@ -65,4 +65,12 @@
 
     </PreferenceCategory>
 
+    <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        android:persistent="false"
+        android:defaultValue="0" />
+
 </PreferenceScreen>
