Add qs status bar header image [2/2]
Change-Id: Iac84e26c8eebc687de882c0e9a3d12fb2d896804

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -119,6 +119,12 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="custom_header"
+        android:fragment="com.raven.lair.fragments.QsCustomHeaderSettings"
+        android:title="@string/custom_header_title"
+        android:summary="@string/custom_header_summary" />
+
     <com.corvus.support.preferences.SecureSettingSwitchPreference
 	android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
