--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -53,4 +53,11 @@
         android:entries="@array/qs_datausage_entries"
         android:entryValues="@array/qs_datausage_values"
         android:defaultValue="0" />
+
+   <com.corvus.support.preferences.SecureSettingListPreference
+        android:key="status_bar_quick_qs_pulldown"
+        android:title="@string/status_bar_quick_qs_pulldown"
+        android:entries="@array/quick_pulldown_entries"
+        android:entryValues="@array/quick_pulldown_values"
+        android:defaultValue="1" />
 </PreferenceScreen>
