--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -81,4 +81,16 @@
         android:title="@string/incall_vibrate_disconnect_title"
         android:defaultValue="false" />
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:title="@string/dev_options_title">
+
+        <ListPreference
+            android:key="ringtone_focus_mode"
+            android:title="@string/ringtone_focus_mode_title"
+            android:entries="@array/ringtone_focus_mode_entries"
+            android:entryValues="@array/ringtone_focus_mode_values" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
