--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -27,6 +27,12 @@
         android:summary="@string/double_tap_sleep_gesture_summary"
         android:defaultValue="false" />
 
+    <com.corvus.support.preferences.SecureSettingSwitchPreference
+            android:key="doze_pulse_on_double_tap"
+            android:title="@string/double_tap_on_doze_to_wake_title"
+            android:summary="@string/double_tap_on_doze_to_wake_summary"
+            android:defaultValue="true" />
+
      <!-- Screenshot Sound  -->
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="screenshot_sound"
