RavenLair: Allow customizing footer text [2/2]
Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: I008907bd8cb2972a209889772012dcd0bd587a1a

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -60,4 +60,17 @@
         android:entries="@array/quick_pulldown_entries"
         android:entryValues="@array/quick_pulldown_values"
         android:defaultValue="1" />
+   
+     <!-- QS footer text toggle -->
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_text_show"
+        android:title="@string/qs_footer_text_show_title"
+        android:defaultValue="false" />
+
+    <!-- QS footer text string -->
+    <com.corvus.support.preferences.SystemSettingEditTextPreference
+        android:key="qs_footer_text_string"
+        android:title="@string/qs_footer_text_string_title"
+        android:dependency="qs_footer_text_show"
+        android:defaultValue="#StayFlocked" />
 </PreferenceScreen>
