RavenLair: Running services icon toggle [2/2]
Change-Id: Id700ad1ec8b20d048b5faf0cd08749044e2d7c34
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
Signed-off-by: Zaviyar786 <beingme639@gmail.com>

--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -73,4 +73,10 @@
         android:title="@string/qs_footer_text_string_title"
         android:dependency="qs_footer_text_show"
         android:defaultValue="#StayFlocked" />
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_running_services_toggle"
+        android:title="@string/qs_running_services_title"
+        android:summary="@string/qs_running_services_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
