--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -25,4 +25,9 @@
         android:summary="@string/navigation_bar_arrow_keys_summary"
         android:defaultValue="false" />
 
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="navigation_bar_inverse"
+        android:title="@string/navigation_bar_inverse_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
