--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -30,4 +30,11 @@
         android:title="@string/navigation_bar_inverse_title"
         android:defaultValue="false" />
 
+   <com.corvus.support.preferences.SystemSettingListPreference
+        android:key="navbar_layout_views"
+        android:title="@string/navbar_layout_title"
+        android:summary="%s"
+        android:entries="@array/navbar_layout_entries"
+        android:entryValues="@array/navbar_layout_values"
+        android:defaultValue="default" />
 </PreferenceScreen>
