--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -18,4 +18,11 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/navigation_options_title" >
 
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="navigation_bar_arrow_keys"
+        android:title="@string/navigation_bar_arrow_keys_title"
+        android:summary="@string/navigation_bar_arrow_keys_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
