--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -18,6 +18,12 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/notifications_title" >
 
+    <Preference
+         android:key="ambient_decor"
+         android:title="@string/ambient_decor_title"
+         android:summary="@string/ambient_decor_summary"
+         android:fragment="com.raven.lair.fragments.AmbientDecorSettings" />
+
     <PreferenceCategory
         android:title="@string/light_settings_header">
 
@@ -47,5 +53,6 @@
             android:title="@string/less_boring_heads_up_title"
             android:summary="@string/less_boring_heads_up_summary"
             android:defaultValue="true" />
+
 
 </PreferenceScreen>
