RavenLair: launch default music player on headset connect [2/2]
Change-Id: I544940f77923a2c7fda8b27c61a30bd622e50164
Signed-off-by: Julian Veit <claymore1298@gmail.com>
Signed-off-by: Zaviyar786 <beingme639@gmail.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -33,6 +33,13 @@
             android:summary="@string/double_tap_on_doze_to_wake_summary"
             android:defaultValue="true" />
 
+     <!-- Launch music player when headset is connected -->
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="headset_connect_player"
+        android:title="@string/headset_connect_player_title"
+        android:summary="@string/headset_connect_player_summary"
+        android:defaultValue="false" />
+
      <!-- Screenshot Sound  -->
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="screenshot_sound"
