Lair: Add Gestures tab
Change-Id: I1a8054b7d2f15c66d09314de3e58e5f5cee41f3e

--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -55,4 +55,7 @@
     <!-- Whether to display power menu category -->
     <bool name="has_powermenu">true</bool>
 
+    <!-- Whether to display gestures category -->
+    <bool name="has_gestures">true</bool>
+
 </resources>
