Lair: Add Gestures tab
Change-Id: I1a8054b7d2f15c66d09314de3e58e5f5cee41f3e

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -30,6 +30,7 @@
     <!--DT Icon backgorunds-->
     <color name="dt_notifications_color">@color/red_bg_light</color>
     <color name="dt_miscellaneous_color">@color/blue_bg_light</color>
+    <color name="dt_gestures_color">@color/green_bg_light</color>
 
     <color name="dt_lockscreen_items_color">@color/green_bg_light</color>
     <color name="dt_fingerprint_prefs_color">@color/orange_bg_light</color>
@@ -49,6 +50,7 @@
     <!--DT Icon foreground tint-->
     <color name="dt_notifications_icon_tint">@color/red_active</color>
     <color name="dt_miscellaneous_icon_tint">@color/blue_active</color>
+    <color name="dt_gestures_icon_tint">@color/green_active</color>
 
     <color name="dt_lockscreen_items_icon_tint">@color/green_active</color>
     <color name="dt_fingerprint_prefs_icon_tint">@color/orange_active</color>
