--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -17,4 +17,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/gestures_title" >
+
+    <!-- Statusbar Gestures -->
+    <PreferenceCategory
+        android:title="@string/statusbar_gestures" >
+
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/status_bar_toggle_brightness"
+            android:summary="@string/status_bar_toggle_brightness_summary"
+            android:defaultValue="false" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
