--- a/res/xml/gesture_manager.xml
+++ b/res/xml/gesture_manager.xml
@@ -44,6 +44,7 @@
         android:title="@string/double_tap_sleep_lockscreen_title"
         android:summary="@string/double_tap_sleep_lockscreen_summary"
         android:defaultValue="false" />
+    </PreferenceCategory>
 
     <!-- Misc Gestures -->
     <PreferenceCategory
