--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -24,11 +24,11 @@
         android:fragment="com.raven.lair.fragments.Notifications" />
 
     <com.raven.lair.preferences.CategoryPreference
-        android:key="gestures_category"
+        android:key="gesture_manager_category"
         android:icon="@drawable/dt_gestures"
         android:title="@string/gestures_title"
         android:summary="@string/gestures_summary"
-        android:fragment="com.raven.lair.fragments.Gestures" />
+        android:fragment="com.raven.lair.fragments.GestureManager" />
 
     <com.raven.lair.preferences.CategoryPreference
         android:key="miscellaneous_category"
