Lair: Add Lottie Animations
* Thanks to Lottie Animations and @rohanpurohit for layouts

Change-Id: I20fe9f80a4410bed1757d803a028f02ccee8588f

--- a/res/xml/system.xml
+++ b/res/xml/system.xml
@@ -16,6 +16,10 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference
+        android:key="system_animation"
+        android:layout="@layout/system_animation" />
+
     <com.raven.lair.preferences.CategoryPreference
         android:key="notifications_category"
         android:icon="@drawable/dt_notifications"
