--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -16,6 +16,10 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference
+        android:key="lockscreen_animation"
+        android:layout="@layout/lockscreen_animation" />
+
     <com.raven.lair.preferences.CategoryPreference
         android:key="lockscreen_items_category"
         android:icon="@drawable/dt_lockscreen_items"
