--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -16,6 +16,10 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference
+        android:key="statusbar_animation"
+        android:layout="@layout/statusbar_animation" />
+
     <com.raven.lair.preferences.CategoryPreference
         android:key="battery_options_category"
         android:icon="@drawable/dt_battery_options"
