--- a/res/xml/buttons.xml
+++ b/res/xml/buttons.xml
@@ -27,5 +27,12 @@
         android:title="@string/volume_rocker_wake_title"
         android:defaultValue="false" />
 
+    <com.corvus.support.preferences.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:summary="@string/volume_rocker_music_controls_summary"
+        android:title="@string/volume_rocker_music_controls_title"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
+
 </PreferenceScreen>
