Lair: Bring back Gaming mode [3/3]
Change-Id: Ic13e11298df0a91e4f2d5c86d289c6c7b091e86b

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -135,4 +135,12 @@
         android:summary="@string/show_clipboard_toast_summary"
         android:defaultValue="false" />
 
+    <!-- Gaming Mode -->
+    <com.corvus.support.preferences.SystemSettingMasterSwitchPreference
+        android:key="gaming_mode_enabled"
+        android:fragment="com.raven.lair.fragments.GamingMode"
+        android:title="@string/gaming_mode_title"
+        android:summary="@string/gaming_mode_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
