--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -109,7 +109,7 @@
        <Preference
             android:key="animations_category"
             android:title="@string/animation_settings_title"
-            android:summary="@string/animation_settings_summary"
+            android:icon="@drawable/ic_settings_animation"
             android:fragment="com.raven.lair.fragments.AnimationSettings" />
 
         <ListPreference
