--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -72,7 +72,7 @@
         android:key="qs_footer_text_string"
         android:title="@string/qs_footer_text_string_title"
         android:dependency="qs_footer_text_show"
-        android:defaultValue="#StayFlocked" />
+        android:defaultValue="#TheRavens" />
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
         android:key="qs_running_services_toggle"
