--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -24,21 +24,38 @@
         android:summary="@string/qs_bg_use_new_tint_summary"
         android:defaultValue="false" />
 
-   <com.corvus.support.preferences.SecureSettingListPreference
-        android:key="qs_show_brightness_slider"
-        android:title="@string/qs_show_brightness_slider_title"
-        android:summary="%s"
-        android:dialogTitle="@string/qs_show_brightness_slider_title"
-        android:entries="@array/qs_show_brightness_slider_entries"
-        android:entryValues="@array/qs_show_brightness_slider_values"
-        android:defaultValue="1" />
+    <PreferenceCategory
+        android:key="string/qs_brightness_category"
+        android:title="@string/qs_brightness_category_title">
 
-    <com.corvus.support.preferences.SecureSettingSwitchPreference
-        android:key="qs_show_auto_brightness"
-        android:title="@string/qs_show_auto_brightness_title"
-        android:summary="@string/qs_show_auto_brightness_summary"
-        android:defaultValue="true" />
+        <com.corvus.support.preferences.SecureSettingListPreference
+            android:key="qqs_show_brightness_slider"
+            android:title="@string/qqs_brightness_slider_title"
+            android:entries="@array/qs_show_brightness_slider_entries"
+            android:entryValues="@array/qs_show_brightness_slider_values"
+            android:summary="%s"
+            android:defaultValue="2" />
 
+        <com.corvus.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness_slider_show_expanded"
+            android:title="@string/qs_show_brightness_slider_expanded_title"
+            android:summary="@string/qs_show_brightness_slider_expanded_summary"
+            android:defaultValue="true" />
+
+        <com.corvus.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_brightness_position_bottom"
+            android:title="@string/qs_brightness_position_bottom_title"
+            android:summary="@string/qs_brightness_position_bottom_summary"
+            android:dependency="qs_show_brightness_slider_show_expanded"
+            android:defaultValue="false" />
+
+        <com.corvus.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_auto_brightness"
+            android:title="@string/qs_show_auto_brightness_title"
+            android:summary="@string/qs_show_auto_brightness_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
 
     <!-- QS Rows&Columns -->
 	<PreferenceCategory
