Add lockscreen background blur [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I26dce67e7d98b577a5c2d7ea4a1bf0e17c4f2596

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -96,4 +96,13 @@
 
     </PreferenceCategory>
 
+    <com.corvus.support.preferences.SystemSettingSeekBarPreference
+        android:key="lockscreen_blur"
+        android:title="@string/lockscreen_blur_title"
+        android:max="100"
+        settings:min="0"
+        settings:units="%"
+        settings:interval="5"
+        android:defaultValue="0" />
+
 </PreferenceScreen>
