--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -102,7 +102,7 @@
            <!-- QS media player -->
     <PreferenceCategory
         android:key="media_category"
-        android:title="@string/media_category" >
+        android:title="@string/qs_media_category" >
 
         <com.corvus.support.preferences.SystemSettingSwitchPreference
             android:key="artwork_media_background"
@@ -119,17 +119,15 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="qs_header_category"
+        android:title="@string/qs_header_category" >
+
     <Preference
         android:key="custom_header"
         android:fragment="com.raven.lair.fragments.QsCustomHeaderSettings"
         android:title="@string/custom_header_title"
         android:summary="@string/custom_header_summary" />
-
-    <com.corvus.support.preferences.SecureSettingSwitchPreference
-	android:key="quick_settings_vibrate"
-        android:title="@string/quick_settings_vibrate_title"
-        android:summary="@string/quick_settings_vibrate_summary"
-        android:defaultValue="false"/>
 
     <com.corvus.support.preferences.SystemSettingListPreference 
         android:key="qs_datausage" 
@@ -144,6 +142,18 @@
         android:entries="@array/quick_pulldown_entries"
         android:entryValues="@array/quick_pulldown_values"
         android:defaultValue="1" />
+
+    <com.corvus.support.preferences.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="qs_footer_category"
+        android:title="@string/qs_footer_category" >
    
      <!-- QS footer text toggle -->
     <com.corvus.support.preferences.SystemSettingSwitchPreference
@@ -163,4 +173,6 @@
         android:title="@string/qs_running_services_title"
         android:summary="@string/qs_running_services_summary"
         android:defaultValue="false" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
