--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -57,5 +57,8 @@
 
     <!-- Whether to display gesture manager category -->
     <bool name="has_gesture_manager">true</bool>
+    
+    <!-- FOD recognizing animation -->
+    <bool name="showFODAnimationPicker">false</bool>
 
 </resources>
