--- a/res/xml/fingerprint_prefs.xml
+++ b/res/xml/fingerprint_prefs.xml
@@ -29,6 +29,14 @@
             android:title="@string/fod_icon_picker_title"
             android:summary="@string/fod_icon_picker_summary"
             android:fragment="com.raven.lair.fragments.FODIconPickerFragment" />
+        
+        <!-- Screen Off FOD -->    
+        <com.corvus.support.preferences.SystemSettingSwitchPreference
+            android:key="fod_gesture"
+            android:title="@string/fod_gesture_title"
+            android:summary="@string/fod_gesture_summary"
+            android:defaultValue="false"
+            settings:controller="com.android.settings.security.screenlock.ScreenOffFodPreferenceController" />
 
         <!-- FOD pressed color -->
         <com.corvus.support.preferences.SystemSettingListPreference
@@ -68,13 +76,13 @@
         android:title="@string/fingerprint_title" >
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
-	android:key="fingerprint_success_vib"
+	      android:key="fingerprint_success_vib"
         android:title="@string/fprint_sucess_vib_title"
         android:summary="@string/fprint_sucess_vib_summary"
         android:defaultValue="true" />
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
-	android:key="fingerprint_error_vib"
+	      android:key="fingerprint_error_vib"
         android:title="@string/fprint_error_vib_title"
         android:summary="@string/fprint_error_vib_summary"
         android:defaultValue="true" />
