--- a/res/xml/fingerprint_prefs.xml
+++ b/res/xml/fingerprint_prefs.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2017-2019 The Dirty Unicorns Project
+     Copyright (C) 2020-2021 CorvusROM
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -69,20 +70,37 @@
             android:key="fod_night_light"
             android:title="@string/fod_night_light_title"
             android:summary="@string/fod_night_light_summary"
-            android:defaultValue="@*android:bool/disable_fod_night_light"  />
+            android:defaultValue="@*android:bool/disable_fod_night_light" />
+
+        <!-- FOD Icon Animations -->
+        <com.corvus.support.preferences.SystemSettingSwitchPreference
+            android:key="fod_icon_animation"
+            android:title="@string/fod_icon_animation"
+            android:summary="@string/fod_icon_animation_summary"
+            android:defaultValue="false" />
+
+        <!-- FOD Icon Animation Picker -->
+        <com.corvus.support.preferences.SystemSettingListPreference
+            android:key="fod_icon_anim_type"
+            android:title="@string/fod_icon_animation_effect_title"
+            android:summary="%s"
+            android:entries="@array/fod_icon_animation_entries"
+            android:entryValues="@array/fod_icon_animation_values"
+            android:defaultValue="0"
+            android:dependency="fod_icon_animation" />
     </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/fingerprint_title" >
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
-	      android:key="fingerprint_success_vib"
+	android:key="fingerprint_success_vib"
         android:title="@string/fprint_sucess_vib_title"
         android:summary="@string/fprint_sucess_vib_summary"
         android:defaultValue="true" />
 
     <com.corvus.support.preferences.SystemSettingSwitchPreference
-	      android:key="fingerprint_error_vib"
+	android:key="fingerprint_error_vib"
         android:title="@string/fprint_error_vib_title"
         android:summary="@string/fprint_error_vib_summary"
         android:defaultValue="true" />
