Ravenlair: Add support for json-based (PIF) spoofing [2/2]
Co-Authored-By: drkphnx <dark.phnx12@gmail.com>
Co-Authored-By: Sã Śâjjãd <sa_sajjad@hotmail.com>
Co-Authored-By: lahaina <34679325+nattolecats@users.noreply.github.com>

--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -43,6 +43,12 @@
 
     </PreferenceCategory>
 
+    <!-- PIF Spoofing -->
+    <Preference
+         android:key="pif_json_file_preference"
+         android:title="@string/pif_spoofing_title"
+         android:summary="@string/pif_spoofing_summary"/>
+
     <PreferenceCategory
         android:title="@string/dashboard_stuff" >
 
